test-cases/inputs/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  namespace: production
  labels:
    tier: frontend
    # yes, still nginx
    app: nginx
  annotations:
    # attached to 'revision'
    deployment.kubernetes.io/revision: "1"
    # attached to 'foo'
    deployment.kubernetes.io/foo: "bar"
    # attached to 'hello'
    deployment.kubernetes.io/hello: "world"
spec:
  selector:
    matchLabels:
      app: nginx
  # min 3 replicas for HA
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      # downtime is fine
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: nginx
        tier: frontend
    spec:
      containers:
        - name: nginx
          image: nginx:1.25
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              # min 128Mi memory required
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 200m
          livenessProbe:
            httpGet:
              path: /
              port: 80
            # give hime some time, will ya!
            initialDelaySeconds: 10
            periodSeconds: 5
