test-cases/inputs/k8s-pod.yaml
kind: Pod
apiVersion: v1
metadata:
  namespace: default
  name: debug-pod
  labels:
    app: debug
spec:
  restartPolicy: Never
  containers:
    - name: busybox
      image: busybox:1.36
      command:
        - sleep
        - "3600"
      resources:
        requests:
          cpu: 50m
          memory: 64Mi
        limits:
          cpu: 100m
          memory: 128Mi
  tolerations:
    - key: dedicated
      operator: Equal
      value: debug
      effect: NoSchedule
